--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Users:</strong>
-  <%= @category.users_id %>
+  <%= @category.user_id %>
 </p>
 
 <p>
   <strong>Games:</strong>
-  <%= @category.games_id %>
+  <%= @category.game_id %>
 </p>
 
 <p>
