--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Users</th>
-      <th>Games</th>
+      <th>User</th>
+      <th>Game</th>
       <th>Name</th>
       <th colspan="3"></th>
     </tr>
@@ -14,9 +14,9 @@
 
   <tbody>
     <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.users_id %></td>
-        <td><%= category.games_id %></td>
+      <tr style="background-color:<%= category.color %>">
+        <td><%= category.user_id %></td>
+        <td><%= category.game_id %></td>
         <td><%= category.name %></td>
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
