--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,6 +6,14 @@
 </p>
 
 
+<% if @has_created_category %> 
+<p> Category created! Add questions!</p>
+
+<% else %> 
+<%= link_to("Create your Category", new_game_category_path(@game, category: { game_id: @game.id, user_id: @user_id } )) %> 
+<% end %> 
+
+
 <div> Members: 
 <ul>
 <% @members.each do |m| %> 
@@ -15,5 +23,6 @@
 </div>
 <%= link_to("Join", game_user_games_path(@game, user_game: { game_id: @game.id, user_id: @user_id } ), method: :post) unless @has_joined %> 
 
+<%= link_to("Sign Out", destroy_user_session_path(), method: :delete)  %> 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
