--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :categories_id %>
-    <%= form.text_field :categories_id %>
+    <%= form.label :category_id %>
+    <%= form.text_field :category_id %>
   </div>
 
   <div class="field">
