--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+    color: white;
+    background-color: black;
+}
+
+ body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+    color: white;
+ 
+}
+
+
+h1 {
+    font-family: 'Amatic SC', cursive;
+}
